# Warm-up

./: .gitignore  README.md  USBドングルの接続確認.py  USB差分取得.py  com_test_get.py  com_test_out.py  ip_test.py  main.py  pyproject.toml  requirements.txt  環境設定手順.txt
_01_SetUp/: _00_fast_setup.py  _01_path_create.py  _02_ADC_setup.py  _03_common_logger.py
_02_dic/: _00_settins_data.py  _01_settings_dic.py  _02_setting_data_get.py
_05_File/: _01_data_read.py  _02_data_save.py  _03_adc_row_data.py
_06_LAN/: _01_ping.py
_07_COM/: _01_com_data_get.py  _02_serial_setup.py
_08_cmd/: _01_starting_up_exe_check.py  _02_adc_start.py
_09_ADC/: _00_adc_Initial_settings.py  _01_ini_check.py  _02_USB_dongle_check.py  _02_adc_com_check.py  _03_adc_start.py  _04_adc_control.py  _05_kill_process.py  _06_brother_cnc_connect.py  _10_adc_constant_monitoring.py
